--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -235,6 +235,27 @@
                 android:textColor="@color/coffee_700"
                 android:textSize="12sp" />
 
+            <TextView
+                android:id="@+id/server_ip_address_label"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Server IP Address" />
+
+            <EditText
+                android:id="@+id/server_ip_address_input"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ems="10"
+                android:inputType="textPersonName"
+                android:minHeight="48dp"
+                android:text="0.0.0.0" />
+
+            <Button
+                android:id="@+id/server_address_ip_commit"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/zapisz" />
+
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
