--- a/app/src/main/res/drawable/lamp_model_off.xml
+++ b/app/src/main/res/drawable/lamp_model_off.xml
@@ -56,39 +56,7 @@
       android:strokeAlpha="0"
       android:strokeLineJoin="round"
       android:strokeWidth="0.209137"
-      android:fillColor="#ffb96b"
-      android:strokeColor="#393939"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M6.1075,7.7769L6.1075,7.7769A0.6151,0.6151 134.9925,0 1,6.7227 8.3919L6.7236,14.6203A0.6151,0.6151 134.9925,0 1,6.1085 15.2355L6.1085,15.2355A0.6151,0.6151 134.9925,0 1,5.4933 14.6204L5.4925,8.3921A0.6151,0.6151 134.9925,0 1,6.1075 7.7769z"
-      android:strokeAlpha="0"
-      android:strokeLineJoin="round"
-      android:strokeWidth="0.166"
-      android:fillColor="#ffb96b"
-      android:strokeColor="#393939"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M12.1199,8.0152L12.1199,8.0152A0.6151,0.6151 134.9148,0 1,12.736 8.6294L12.7452,14.8578A0.6151,0.6151 134.9148,0 1,12.131 15.4738L12.131,15.4738A0.6151,0.6151 134.9148,0 1,11.5149 14.8596L11.5057,8.6312A0.6151,0.6151 134.9148,0 1,12.1199 8.0152z"
-      android:strokeAlpha="0"
-      android:strokeLineJoin="round"
-      android:strokeWidth="0.166"
-      android:fillColor="#ffb96b"
-      android:strokeColor="#393939"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M25.985,7.7034L25.985,7.7034A0.6151,0.6151 45.2778,0 1,26.5972 8.3215L26.567,14.5498A0.6151,0.6151 45.2778,0 1,25.9488 15.1619L25.9488,15.1619A0.6151,0.6151 45.2778,0 1,25.3367 14.5438L25.3669,8.3155A0.6151,0.6151 45.2778,0 1,25.985 7.7034z"
-      android:strokeAlpha="0"
-      android:strokeLineJoin="round"
-      android:strokeWidth="0.166"
-      android:fillColor="#ffb96b"
-      android:strokeColor="#393939"
-      android:strokeLineCap="round"/>
-  <path
-      android:pathData="M19.1658,8.0136L19.1658,8.0136A0.6151,0.6151 45.0131,0 1,19.7808 8.6289L19.7794,14.8572A0.6151,0.6151 45.0131,0 1,19.1641 15.4722L19.1641,15.4722A0.6151,0.6151 45.0131,0 1,18.5491 14.8569L18.5505,8.6286A0.6151,0.6151 45.0131,0 1,19.1658 8.0136z"
-      android:strokeAlpha="0"
-      android:strokeLineJoin="round"
-      android:strokeWidth="0.166"
-      android:fillColor="#ffb96b"
+      android:fillColor="#665e66"
       android:strokeColor="#393939"
       android:strokeLineCap="round"/>
 </vector>
