--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
             android:layout_height="match_parent">
 
             <LinearLayout
+                android:id="@+id/server_status_button"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:baselineAligned="false"
