--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -75,24 +75,27 @@
         <LinearLayout
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
             <TextView
                 android:id="@+id/textView6"
-                android:layout_width="match_parent"
+                android:layout_width="238dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
+                android:ellipsize="end"
+                android:singleLine="false"
                 android:text="@string/rozmieszczenie_element_w_w_growbox_sie"
                 android:textColor="@color/White" />
 
-            <Button
+            <ImageButton
                 android:id="@+id/goto_boxlayout_button"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/growbox" />
+                android:backgroundTint="@color/Button"
+                android:minWidth="21dp"
+                android:src="@drawable/ic_baseline_arrow_forward_24" />
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
